--- a/views/Layouts/main.handlebars
+++ b/views/Layouts/main.handlebars
@@ -14,8 +14,8 @@
     <ul>
         <li id="nav-home">HOME</li>
         <li id="nav-dashboard">DASHBOARD</li>
-        <li id="nav-login">LOGIN</li>
-        <li id="nav-logout">LOGOUT</li>
+        <li id="nav-login"><a href="/login"><button id="loginBtn">LOGIN</button></a></li>
+            <li id="nav-logout"><button id="logoutBtn">LOG OUT</button></li>
     </ul>
     
 </nav>
