this shis isn't working

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -4,9 +4,9 @@
         <br>
         <br>
         <br>
-        <input class="form-input" placeholder="Username" id="user_name" style="width: 20rem;">
+        <input value="" class="form-input" placeholder="Username" id="user_name" style="width: 20rem;">
         <br>
-        <input class="form-input" type="password" id="password" placeholder="Password" style="width: 20rem;">
+        <input value="" class="form-input" type="password" id="password" placeholder="Password" style="width: 20rem;">
         <br>
 
         <button id="signUpFormBtn" type="submit">Sign Up</button>
@@ -14,3 +14,4 @@
         <a id="login-form-link" href="/login">Login Instead</a>
     </form>
     </div>
+    <script src="./public/sign-up"></script>
