--- a/public/src/style.css
+++ b/public/src/style.css
@@ -35,6 +35,27 @@ nav {
 }
 
 
+#signUpBtn {
+    width: 10em;
+    font-family: 'Mohave', sans-serif;
+    margin: 5px;
+    font-size: 1.1em;
+    color: #ece68c;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: #243340;
+}
+
+#signInBtn {
+    width: 10em;
+    font-family: 'Mohave', sans-serif;
+    margin: 5px;
+    font-size: 1.1em;
+    color: #ece68c;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: #243340;
+}
 
 #logo {
     font-size: 2em;
@@ -85,6 +106,7 @@ a {
     background-color: #ece68c;
     margin-top: 20vh;
     width: 40em;
+    display: none;
     text-align: center;
     font-family: 'PT Sans', sans-serif;
     border: #6e3819 solid 5px ;
@@ -127,6 +149,7 @@ a {
 }
 #loginForm {
     background-color: #ece68c;
+    display: none;
     margin-top: 20vh;
     width: 40em;
     text-align: center;
