--- a/views/Layouts/main.handlebars
+++ b/views/Layouts/main.handlebars
@@ -1,34 +1,44 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Mohave:wght@536&family=PT+Sans&display=swap" rel="stylesheet">
-    <title>The Sun Room</title>
-</head>
-<header>
-<nav>
-    <ul>
-        <li id="nav-home">HOME</li>
-        <li id="nav-dashboard">DASHBOARD</li>
-            <li id="nav-logout"><button id="logoutBtn">LOG OUT</button></li>
-    </ul>
-    
-</nav>
-<h1 id="logo">
-    THE TECH BLOG
-</h1>
-<div>
-        {{{body}}}
-    </div>
-</header>
-    <footer>
-        &copy; The Tech Blog Productions 2021
-    </footer>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Fashion Blog</title>
+  <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <div class="flex-column justify-space-around">
+    <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        
+        <a href="/">Random Blog</a>
+      </h1>
+      <nav>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
